hphp/test/slow/object/const/not_on_enum.hhas.expectf
Fatal error: Assembler Error: line 17: interfaces, traits and enums may not be const in %s/not_on_enum.hhas on line -1
